--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div id="nav_conteiner">
 
             <nav class="navbar navbar-expand-lg" id="bkgnd_color" >
-                <div class="container-fluid" id="bkgnd_color">
-                  <a class="navbar-brand" href="#"></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <div class="container-fluid" >
+                  <a class="navbar-brand" href="#" ></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="bkgnd_color"  >
+                    <span class="navbar-toggler-icon" id="burger_button_color" ></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
