--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src='main.js'></script>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/pruebascss.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style/style_responsive.css'>
 </head>
 <body>
     <header>
